fixed overflow

--- a/client/src/app/index.scss
+++ b/client/src/app/index.scss
@@ -269,6 +269,7 @@ form.form-container {
   float: right;
   height: 100%;
   width: 80%;
+  overflow-y: auto;
 }
 
 div.playlist-video-content {
